<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/atmAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:text="@string/str_atm_amount"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toStartOf="@id/atmAmount100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/atmAmount100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_rs_100"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@id/atmAmountTextView"
        app:layout_constraintEnd_toStartOf="@id/atmAmount200"
        app:layout_constraintStart_toEndOf="@id/atmAmountTextView"
        app:layout_constraintTop_toTopOf="@id/atmAmountTextView"
        app:layout_constraintVertical_chainStyle="spread" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/atmAmount200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_rs_200"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@id/atmAmountTextView"
        app:layout_constraintEnd_toStartOf="@id/atmAmount500"
        app:layout_constraintStart_toEndOf="@id/atmAmount100"
        app:layout_constraintTop_toTopOf="@id/atmAmountTextView"
        app:layout_constraintVertical_chainStyle="spread" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/atmAmount500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_rs_500"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@id/atmAmountTextView"
        app:layout_constraintEnd_toStartOf="@id/atmAmount2000"
        app:layout_constraintStart_toEndOf="@id/atmAmount200"
        app:layout_constraintTop_toTopOf="@id/atmAmountTextView"
        app:layout_constraintVertical_chainStyle="spread" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/atmAmount2000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_2sdp"
        android:text="@string/str_rs_2000"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@id/atmAmountTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/atmAmount500"
        app:layout_constraintTop_toTopOf="@id/atmAmountTextView"
        app:layout_constraintVertical_chainStyle="spread" />

</androidx.constraintlayout.widget.ConstraintLayout>