<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="ATMCurrencyCalculationActivityBinding">
        <variable
            name="state"
            type="com.atmcurrencycalculation.view.ATMCurrencyCalculationState" />

        <variable
            name="viewModel"
            type="com.atmcurrencycalculation.viewmodel.ATMCurrencyCalculationViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_5sdp"
        tools:context=".view.ATMCurrencyCalculationActivity">

        <include
            android:id="@+id/topCardView"
            layout="@layout/atm_amount_with_currency_division"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            app:model="@={state.ATMLoadCurrencyModel}"
            android:layout_marginTop="572dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></include>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/withdrawAmountEditTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:hint="@string/str_enter_your_withdraw_amount"
            android:paddingHorizontal="@dimen/_5sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:circularflow_defaultRadius="@dimen/_20sdp"
            app:layout_constraintCircleRadius="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="@id/topCardView"
            app:layout_constraintStart_toStartOf="@id/topCardView"
            app:layout_constraintTop_toBottomOf="@id/topCardView">

            <EditText
                android:id="@+id/withDraweditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:backgroundTint="@color/grey"
                android:text="@={state.withDrawAmount}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/withDrawButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/str_withdraw"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corder_button_style"
            app:layout_constraintEnd_toEndOf="@id/topCardView"
            app:layout_constraintStart_toStartOf="@id/topCardView"
            app:layout_constraintTop_toBottomOf="@id/withdrawAmountEditTextInputLayout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lastTransactionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_12sdp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/str_last_transaction"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="@id/topCardView"
            app:layout_constraintTop_toBottomOf="@id/withDrawButton" />

        <include
            android:id="@+id/lastTransactionCardView"
            layout="@layout/last_transaction_currency_division"
            android:layout_width="0dp"
            app:model="@{state.lastTransactionHistory}"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastTransactionTextView"></include>

        <androidx.cardview.widget.CardView
            android:id="@+id/transactionHistoryCardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10sp"
            android:elevation="@dimen/_10sdp"
            app:cardElevation="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="@id/topCardView"
            app:layout_constraintStart_toStartOf="@id/topCardView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastTransactionCardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <include
                    android:id="@+id/headerView"
                    layout="@layout/layout_transaction_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"></include>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/yourTransactionList"
                    layout="@layout/atm_amount_with_currency_division"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/headerView">

                </androidx.recyclerview.widget.RecyclerView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <!--    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/btn_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circular_border_shape" />-->

        <!-- <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.5" />

         <View
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:background="#8D8D8D"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />

         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">

             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/lblInsertHeading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="Enter the Username and Password"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />

             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/txtUsername"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textColor="#000000"
                 android:hint="Username"
                 android:textColorHint="#8D8D8D"
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="40dp"
                 android:layout_marginEnd="40dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/lblInsertHeading" />

             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/txtPassword"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textColor="#000000"
                 android:hint="Password"
                 android:textColorHint="#8D8D8D"
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="40dp"
                 android:layout_marginEnd="40dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtUsername" />

             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnAddLogin"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="40dp"
                 android:layout_marginEnd="40dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtPassword"
                 android:text="Insert Credentials"/>

             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/lblInsertResponse"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="- - -"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_margin="20dp"
                 android:gravity="center"
                 android:lineSpacingExtra="5dp"
                 android:textColor="@android:color/holo_orange_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnAddLogin" />

         </androidx.constraintlayout.widget.ConstraintLayout>

         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline">

             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/lblReadHeading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Reading and Displaying Data From Room"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnReadLogin" />

             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/lblUseraname"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="- - -"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_margin="20dp"
                 android:gravity="center"
                 android:lineSpacingExtra="5dp"
                 android:padding="10dp"
                 android:textColor="@android:color/holo_orange_light"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/lblReadHeading" />

             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/lblPassword"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="- - -"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_margin="20dp"
                 android:gravity="center"
                 android:lineSpacingExtra="5dp"
                 android:padding="10dp"
                 android:textColor="@android:color/holo_orange_light"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/lblUseraname" />

             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnReadLogin"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="40dp"
                 android:layout_marginEnd="40dp"
                 android:text="Click To Read Credentials From Room"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />

             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/lblReadResponse"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:gravity="center"
                 android:lineSpacingExtra="5dp"
                 android:text="- - -"
                 android:textColor="@android:color/holo_orange_light"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/lblPassword" />

         </androidx.constraintlayout.widget.ConstraintLayout>-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>